@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods
left to right direction


'title Domain Model

'class Platform {
'  -description
'}

class RealEstate {
    name
    address
    descriptions
    website
    phoneNumber
    email
    vatNumber
    logo
}

class Client {
    name
    descriptions
    tax number
    address
    email address
    phone number
    password
}
class Owner {
     name
     descriptions
     tax number
     address
     email address
     phone number
     password
}

abstract class Proprietary {
    name
    Tipo
    address
    descriptions
    cost
    vender:boolean
    render:boolean
}
class Land{
}

class Apartment{
numberOfRooms
numberOfBathrooms
numberOfFloors
numberOfGarages
Equipaments

}
class House{
numberOfRooms
    numberOfBathrooms
    numberOfFloors
    numberOfGarages
    Equipaments
    Basement: boolean
    inhabited  loft: boolean
    Sun exposure: boolean

}
class Advertisement{
    owner
    descriptions
    RealEstateAgent
    cost
    Proprietary
}
class Schedule{
    date
    time
    descriptions
}
class visit{
    Client
    date
    time
    descriptions
    RealEstateAgent
    ResultOfTheVisit : boolean
}
class Order{
    descriptions
    client
    owner
    Proprietary
    RealEstateAgent
}

enum TipoOrder{
tipo
}
class StoreNetWork{
name
address
}
class Store{
name
vatNumber
website
phoneNumber
email
NumberOfBranches
LocalManager
}

class NetWorkManager{
}
class StorePerformance{
descriptions
date
NetWorkManager
Store
}
class Administrator{
    name
    descriptions
    tax number
    address
    email address
    phone number
    password
}
class EmployeesPerformance{
descriptions
date
RealEstateAgent
StoreManager
}
class  RealEstateAgent{
}
class StoreManager{
}
class Employee{
    name
    descriptions
    tax number
    address
    email address
    phone number
    password
}
enum Roles{
    ROLE_STORE_MANAGER
    ROLE_REAL_ESTATE_AGENT
}

RealEstateAgent --|> Employee : is
StoreManager --|> Employee : is

Employee "1"--"1" Roles : has
RealEstate "1"--"1" StoreNetWork
StoreNetWork "1"--"*" Store : has
Store "1"--"1" Employee :has
StoreNetWork "1"--"1" NetWorkManager

Administrator "1"--"*" Employee : Create
Advertisement "1"--"1" Proprietary : has
House  --|>  Proprietary : is
Apartment  --|>  Proprietary : is
RealEstate "1"--"0..*" Proprietary : has
Land  --|>  Proprietary : is
Owner "1"--"0..*"Advertisement : has or Request
RealEstateAgent "1"--"0..*"Advertisement : Publishes
Client "1"--"1"visit : request
RealEstateAgent "1"--"1"visit : attends
RealEstateAgent "1"--"0..*"Schedule : has
Order "0..*"--"1" TipoOrder : has
Store "1"--"0..*" Employee : has
Client "1"--"0..*" Order : Request
Order "0..*"--"1" RealEstateAgent : Accepts or rejects
StoreManager "1"--"0..*" EmployeesPerformance : Makes
EmployeesPerformance "0..*"--"1" Employee : has
RealEstate "1"--"1" Administrator : has
Owner "1"--"1..*" Proprietary : has
NetWorkManager "1"--"0..*" StorePerformance : Makes
StorePerformance "0..*"--"1" Store : has
Owner "1"--"0..*" RealEstateAgent : Request listing Proprietary
RealEstateAgent "1"--"0..*" Proprietary : creates Proprietary

@enduml